--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "laralabs-vue-toaster": "^3.0.1",
         "notyf": "^3.10.0",
         "preline": "^2.5.1",
+        "toastify-js": "^1.12.0",
         "toastr": "^2.1.4",
         "velocity-animate": "^1.5.2"
     }
